--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Specific to project
+keys/
+.vscode/
+notebooks/
+data/conversations
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
